--- a/index.html
+++ b/index.html
@@ -2,36 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>DWA | Order Summary Card</title>
 </head>
 <body>
+  <div class="order-summary-card-container">
+    <div class="hero">
+      <img src="images/illustration-hero.svg" alt="illustration-hero">
+    </div>
 
-  Order Summary
+    <div class="text-content">
+      <h2 class="title">
+        Order Summary
+      </h2>
+      <p class="subtitle">
+        You can now listen to millions of songs, audiobooks, and podcasts on any 
+        device anywhere you like!
+      </p>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+      <div class="plan-box">
+        <div class="plan-box-left">
+          <img src="images/icon-music.svg" alt="music-icon">
+        </div>
+        <div class="plan-box-middle">
+          <h5 class="plan-annual">Annual Plan</h5>
+          <p class="price-annual">$59.99/year</p>
+        </div>
+        <div class="plan-box-right">
+          <a href="">Change</a>
+        </div>
+      </div>
 
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <button class="proceed-btn">
+        Proceed to Payment
+      </button>
+      <button class="cancel-btn">
+        Cancel Order
+      </button>
+    </div>
   </div>
 </body>
 </html>
