--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <div class="plan-box">
         <div class="plan-box-left">
           <img src="images/icon-music.svg" alt="music-icon">
-        </div>
-        <div class="plan-box-middle">
-          <h5 class="plan-annual">Annual Plan</h5>
-          <p class="price-annual">$59.99/year</p>
+          <div class="plan-content">
+            <h5 class="plan-annual">Annual Plan</h5>
+            <p class="price-annual">$59.99/year</p>
+          </div>
         </div>
         <div class="plan-box-right">
-          <a href="">Change</a>
+          <a href="#" class="change-plan">Change</a>
         </div>
       </div>
 
